# point_clouds_registration_benchmark

./: .gitignore  README.md  eth_setup.py  kaist_setup.py  planetary_setup.py  setup.py  tum_setup.py
devel/: generate_pcd_kaist.py  gt_check_analyzer.py  gt_checker.py  kaist_align.py  kaist_overlap.py  overlap_fast.py  pair_checker.py  pair_sampling.py  pcd_remover.sh  planetary_map_sampling.py  plot_overlap_hist.py  scale_calculator.py  tum_download.py
devel/overlap/: apartment_overlap.txt  box_met_overlap.txt  desk_overlap.txt  gazebo_summer_overlap.txt  gazebo_winter_overlap.txt  hauptgebaude_overlap.txt  long_office_household_overlap.txt  overlap_distances.txt  p2at_met_overlap.txt  pioneer_slam2_overlap.txt  pioneer_slam3_overlap.txt  pioneer_slam_overlap.txt  plain_overlap.txt  stairs_overlap.txt  urban05_overlap.txt  wood_autumn_overlap.txt  wood_summer_overlap.txt
devel/registration_pairs/: apartment_global.txt  apartment_local.txt  apartment_local.txt_tmp  bounds.txt  box_met_global.txt  box_met_local.txt  desk_global.txt  desk_local.txt  gazebo_summer_global.txt  gazebo_summer_local.txt  gazebo_winter_global.txt  gazebo_winter_local.txt  hauptgebaude_global.txt  hauptgebaude_local.txt  long_office_household_global.txt  long_office_household_local.txt  p2at_met_global.txt  p2at_met_local.txt  pioneer_slam2_global.txt  pioneer_slam2_local.txt  pioneer_slam3_global.txt  pioneer_slam3_local.txt  pioneer_slam_global.txt  pioneer_slam_local.txt  plain_global.txt  plain_local.txt  planetary_map_global.txt  (+11 more)
metric/: CMakeLists.txt  metric.hpp  metric.py
